* Release 2.5

Added "httpproxyauth" (thanks to James CE Johnson)

Added "runasuser/-N" (thanks to Thomas Melzer)

Added per-target ID checking (originally by Alain Turbide).

Fixed a bug with "anonymous" tunnel specs (using a "*" to default to
the server address).

* Release 2.4.1 (2002/05/29)

Fixed incorrect selection of client TCP/UDP mode when handler function is
run in-line (as a result of debug, multiuse or command setting).

Fixed message when client requests incompatible TCP/UDP mode.

Added "dumpdata" keyword to enable a dump of local traffic when this is
true (and the verbosity level is 5 or greater).

Added support for BSD/OS (OS=bsdi) in the Makefile -- thanks to Brett Wynkoop.

* Release 2.4.0 (2002/05/09)

Added support for building on MacOS X (sorry, no support for "classic" MacOS
yet). This required a larger initial thread stack size, which can now be
specified at compile time.

Fix handling of targets containing sub-net specifications.

Eliminate use of non-reentrant inet_ntoa() calls. This has never been
observed as a problem but could, potentially, cause issues with confusing
messages or even incorrect connections.

"Modernised" vncserver.zbd configuration file.

Improved the Windows key generation code. Note, however, that Zebedee's key
generation for all platforms is still not guaranteed to be cryptographically
strong. If you are really, really, concerned with the quality of key
generation please examine the code, improve it if necessary or call out to an
external command (such as "gpg --gen-random"). However, unless you are trying
to defend very sensitive traffic against snooping from determined and
well-equipped attackers I wouldn't worry too much. And if you are trying to do
that, Zebedee may not be the right choice for you anyway :-)

Changed server tunnel establishment message to be more informative.

Fixed (implemented!) "detached" mode for server-initiated connections. It